--- a/muilt-page-vue/src/view/zhihu/index.html
+++ b/muilt-page-vue/src/view/zhihu/index.html
@@ -2,10 +2,10 @@
 <html lang="zh-CN">
 
 <head>
-    <title>demo</title>
+    <title>zhihu</title>
 </head>
 
-<body class="sidebar-mini skin-blue-light">
+<body>
 <div id="app"></div>
 </body>
 
