--- a/src/view/blog/index.html
+++ b/src/view/blog/index.html
@@ -2,11 +2,12 @@
 <html lang="zh-CN">
 
 <head>
-    <title>demo</title>
+    <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
+    <title>示例-个人博客(利用WordPress自带的REST接口)</title>
 </head>
 
 <body>
-<div id="app"></div>
+    <div id="app"></div>
 </body>
 
 </html>
