--- a/src/view/demo/index.html
+++ b/src/view/demo/index.html
@@ -2,6 +2,7 @@
 <html lang="zh-CN">
 
 <head>
+    <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
     <title>demo</title>
 </head>
 
